# Autonomous-Boat-V2

./: .bashrc  Dockerfile  compose.yaml
catkin_ws/src/launch_pkg/: CMakeLists.txt  package.xml
catkin_ws/src/launch_pkg/launch/: launch.launch
catkin_ws/src/lidar_pkg/: package.xml
catkin_ws/src/lidar_pkg/scripts/: lidar_node.py
